updated og image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Tier5 IoT</title>
+    <meta property="og:image" content="img/profile.png" />
 	<link rel="icon" href="https://tier5.us/images/favicon.ico">
 
 
