--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             <b data-src="images/image-slider-5.jpg">Slide 5</b>
                         </a>
                        
-                        <a class="video" href="http://www.youtube.com/watch?v=VGiGHQeOqII">
+                        <a class="video" href="https://www.youtube.com/watch?v=EF2lCvCasCk">
                 <b data-src="images/image-slider-3.jpg">YouTube Slider</b>
             </a> 
                         <a class="lazyImage" href="images/image-slider-4.jpg">Slide 4</a>
