--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
                 
             </div>
-            <div class="row">
+           <!--  <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -153,7 +153,7 @@
                     </a>
                 </div>
                 
-            </div>
+            </div> -->
         </div>
     </section>
 
