--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Tier5">
 
     <title>Tier5 IoT</title>
     <meta property="og:image" content="img/profile.png" />
@@ -379,7 +379,7 @@
                             <p>The Bug Me project is built on the Particle.io board. It is a simple project allowing for the control of the device over the internet. You can use the controls above to control the device in the CEO's office and bug him. </p>
                             <ul class="list-inline item-details">
                                 <li>Board:
-                                    <strong><a href="http://particle.io">Particle</a>
+                                    <strong><a href="http://particle.io">Particle Photon</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -526,7 +526,7 @@
                             <p>This is a simple wall outlet that is connected as an IoT device. You can now turn the outlet on/off from anywhere in the world. We use it to turn our AC's on before anyone comes to the office so it's nice and cool for everyone once they get here, while we can save as much energy as possible. </p>
                             <ul class="list-inline item-details">
                                 <li>Board:
-                                    <strong><a href="http://particle.io">Particle</a>
+                                    <strong><a href="http://particle.io">Particle Photon</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -560,18 +560,18 @@
                             <h2>Sensor System</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This IoT device is a simple sensor station. It reads it's enviorment with the following sensors. Light, Sound, Tempature, Humidity, Pressure, Altitude, Dust, and Carbon Dioxide.</p>
                             <ul class="list-inline item-details">
                                 <li>Board:
-                                    <strong><a href="http://particle.io">Particle</a>
+                                    <strong><a href="http://particle.io">Particle Photon</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">May 2016</a>
+                                    <strong>May 2016</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">IoT Development</a>
+                                    <strong>IoT Development</a>
                                     </strong>
                                 </li>
                             </ul>
